2002-06-28  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/core/adaptivity/PlayHelper.java:
	Bug #1540 -- Message could be more explanatory on setValue exception
	Print all the plays that went into determining the value being set.

	* org/cougaar/core/relay/RelayLP.java:
	Bug #1573 -- NPE in RelayLP
	Added checks for null target set in all places where it is
	fetched. This makes the LP more bulletproof against buggy Relay
	implementations.

2002-06-27  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/core/naming/NSImpl.java:
	Bug #1570 -- Deadlock in name server.
	Too much "synchronized" code. The mapOfMaps was being needlessly
	locked during subdirectory creation and removal. The eventuality
	against which the lock was trying to protect cannot, in fact,
	happen.

2002-06-24  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/util/log/LoggingServiceWithPrefix.java:
	Bug #1533 -- Identification of malfunctioning agents is hard.
	Implementation of LoggingService that prefixes a string to every
	log message. The current implementation wraps a LoggingService
	with a version that adds a prefix.

	* org/cougaar/core/adaptivity/PlayHelper.java:
	Bug #1540
	Partial fix catches the exception and prints the name of the
	operating mode. Does not identify the agent or the plays since
	that information is not available without a significant rewrite.

	* org/cougaar/core/blackboard/Subscriber.java:
	Bug #1536 -- persistence files contain NotPersistable objects
	Comment out debug code that can't work when NotPersistable objects
	are actually persisted.

	* org/cougaar/core/blackboard/Publishable.java:
	Bug #1539 -- Publishable.isPersistable ignored
	Expand documentation somewhat with an example.

	* org/cougaar/core/adaptivity/OMCBase.java:
	Bug #1540 -- Message could be more explanatory on setValue exception
	Print OperatingMode name.

2002-06-19  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/core/adaptivity/OperatingModeServiceProvider.java: